# t5-text-summarization-cnn-dailymail

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
results/: cnn_dailymail_examples.json  cnn_dailymail_training_history.json  xsum_examples.json  xsum_training_history.json
src/: main.py  test.py
src/app/: app.py
src/data/: dataio.py
src/model/: model.py
src/train/: train.py
src/utils/: utils.py
